fix_swagger_zhushi_model
